# nullDC

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Trunk.toml  build.rs  index.html  tool-versions.txt
.cargo/: config.toml
.github/workflows/: deploy.yml
bench/panic_vs_rvs/: Cargo.toml
bench/panic_vs_rvs/src/: main.rs
bench/tls/: Cargo.toml
bench/tls/benches/: tls_vs_param.rs
bench/tls/src/: core.rs  main.rs
crates/arm7di-core/: Cargo.toml
crates/arm7di-core/src/: arm7di_disasm.rs  lib.rs
crates/arm7di-core/tests/: arm7di_bin_tests.rs
crates/devcast/reios/: Cargo.toml
crates/devcast/reios/src/: descrambl.rs  gdrom_hle.rs  lib.rs  reios.rs  traits.rs
crates/dreamcast/: Cargo.toml  build.rs
crates/dreamcast/ffi/refsw2/: core_structs.h  refsw2_stub.cc  refsw2_stub.h  refsw_lists.h  refsw_tile.cc
crates/dreamcast/src/: aica.rs  area0.rs  arm7_disasm.rs  asic.rs  gdrom.rs  lib.rs  maple.rs  pvr.rs  refsw2.rs  reios_impl.rs  sgc.rs  spg.rs  system_bus.rs  ta.rs
crates/dreamcast/src/arm7di/: mod.rs
crates/nulldc-minimal/: Cargo.toml
crates/nulldc-minimal/src/: main.rs
crates/refsw2/: Cargo.toml
crates/refsw2-cpp/: Cargo.toml  build.rs
crates/refsw2-cpp/ffi/: TexUtils.h  gentable.py  pvr_mem.h  pvr_regs.h  refsw2_stub.cc  refsw2_stub.h  refsw_tile.cc  refsw_tile.h
crates/refsw2-cpp/src/: lib.rs
crates/refsw2-rust/: Cargo.toml
crates/refsw2-rust/src/: lib.rs  lists.rs  pvr_mem.rs  tex_utils.rs  tile.rs  types.rs
crates/refsw2/ffi/: TexUtils.cc  gentable.h  refsw_lists.cc  refsw_lists_regtypes.h
crates/refsw2r/: Cargo.toml
crates/refsw2r/src/: lists.rs  lists_types.rs  pvr_regs.rs  tile.rs
crates/sh4-core/: Cargo.toml  README.md
crates/sh4-core/src/: backend_fns.rs  backend_ipr.rs  lib.rs  pvr.rs  sh4dec.rs  sh4mem.rs  sh4p4.rs
crates/sh4-core/tests/: mem_handler_tests.rs  sh4_json_tests.rs  singlestep.rs  test_reader.rs
debugger-ui/: Dockerfile  IDEA.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
debugger-ui/.claude/: settings.local.json
debugger-ui/crates/aica-dsp/src/: dsp.rs  lib.rs
debugger-ui/experiments/aica_dsp_playground/: .gitignore  .gitlab-ci.yml
debugger-ui/experiments/aica_dsp_playground/dsp/: aica.cpp  dsp_interp.cpp
debugger-ui/experiments/aica_dsp_playground/ui/: index.html
debugger-ui/experiments/sh4_sim/public/: index.html  style.css
debugger-ui/scripts/: postbuild-version.js  prebuild-version.js
debugger-ui/server/: mockServer.ts
debugger-ui/src/: App.tsx  main.tsx
debugger-ui/src/app/components/: DisassemblyView.tsx  DspAssemblyEditor.tsx  DspSourceEditor.tsx  MemoryView.tsx  WaveformPlotter.tsx
debugger-ui/src/app/dsp/: dspCompiler.test.ts  dspCompiler.ts  dspCompilerPreprocessor.ts  dspUtils.ts
debugger-ui/src/app/layout/: AboutDialog.tsx  AboutPane.tsx  AppLayout.tsx  DocsPage.tsx  DspPlaygroundPage.tsx  HomePage.tsx  HomePane.tsx  Panel.tsx  Sh4SimPage.tsx  TopNav.tsx  useAboutModal.ts
debugger-ui/src/app/panels/: AudioPanel.tsx  BreakpointsPanel.tsx  CallstackPanel.tsx  CoreInspectorPanel.tsx  DeviceTreePanel.tsx  DisassemblyPanel.tsx  DspPanel.tsx  DspPlaygroundPanel.tsx  EventLogPanel.tsx  FrameLogPanel.tsx  MemoryPanel.tsx  Sh4SimPanel.tsx  TaInspectorPanel.tsx  ThreadsPanel.tsx  WatchPanel.tsx  WatchesPanel.tsx
debugger-ui/src/app/sh4Sim/: sim.ts
debugger-ui/src/lib/: aicaDsp.ts  debuggerSchema.ts  sha256.ts
debugger-ui/src/services/: debuggerClient.ts  jsonRpcClient.ts  transport.ts
debugger-ui/src/state/: breakpointCategoryState.ts  debuggerDataStore.ts  sessionStore.ts
debugger-ui/src/theme/: ThemeModeProvider.tsx  index.ts
devtools/: .gitignore  Dockerfile  IDEA.md  README.md  eslint.config.js  fly.toml  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
devtools/crates/aica-dsp/: Cargo.toml
devtools/crates/aica-dsp/src/: dsp.rs
devtools/experiments/aica_dsp_playground/: CMakeLists.txt
devtools/experiments/aica_dsp_playground/dsp/: dsp.cpp  dsp.h
devtools/experiments/aica_dsp_playground/ui/: sdl.cpp
devtools/experiments/aica_dsp_playground_rust/: index.html
devtools/experiments/powervr_logviewer/: index.html
devtools/experiments/sh4_sim/: LICENSE
devtools/experiments/sh4_sim/public/: sim.js
devtools/server/: mockServer.ts
devtools/src/: App.tsx  config.ts  index.css
devtools/src/app/components/: DisassemblyView.tsx  DspAssemblyEditor.tsx  DspSourceEditor.tsx  HideOnHoverTooltip.tsx  MemoryView.tsx  SgcChannelHeader.tsx  SgcChannelSidebar.tsx  SgcChannelView.tsx  SgcWaveformCanvas.tsx  SgcWaveformRenderer.ts  index.ts
devtools/src/app/dsp/: defaultDspSource.ts  defaultSource.ts  dspCompiler.ts  dspUtils.ts
devtools/src/app/dsp/test-fixtures/: reverb.asm
devtools/src/app/layout/: AboutDialog.tsx  AppLayout.tsx  Clx2CoreLogAnalyzerPage.tsx  Clx2TaLogAnalyzerPage.tsx  ConnectionModal.tsx  DockingLayout.tsx  DocsPage.tsx  DspPlaygroundPage.tsx  HomePage.tsx  PanelSelectorModal.tsx  Sh4SimPage.tsx  TopNav.tsx  aboutVersion.ts  navigationItems.ts  panelRegistry.tsx
devtools/src/app/panels/: AudioPanel.tsx  BreakpointsPanel.tsx  CallstackPanel.tsx  CoreInspectorPanel.tsx  DeviceTreePanel.tsx  DisassemblyPanel.tsx  DocumentationPanel.tsx  DspPlaygroundPanel.tsx  EventLogPanel.tsx  MemoryPanel.tsx  Sh4CachePanels.tsx  Sh4RegisterPanels.tsx  Sh4SimPanel.tsx  TaInspectorPanel.tsx  WatchesPanel.tsx
devtools/src/app/sh4Sim/: defaultSource.ts  sim.ts
devtools/src/lib/: aicaDsp.ts  debuggerSchema.ts  jsonRpc.ts  sgcChannelData.ts  uuid.ts
devtools/src/services/: debuggerClient.ts  disassemblyRegistry.ts  jsonRpcClient.ts  transport.ts
devtools/src/state/: debuggerDataStore.ts  disassemblyNavigationService.ts  sessionStore.ts
devtools/src/theme/: ThemeModeProvider.tsx
src/: broadcast_debug_server.rs  debugger_core.rs  debugger_html5_broadcast_server.rs  debugger_server_main.rs  debugger_websocket_server.rs  dreamcast.rs  lib.rs  main.rs  mock_debug_server.rs  shader.wgsl
src/dreamcast/: mod.rs
src/dreamcast/sh4/: backend_fns.rs  backend_ipr.rs  mod.rs  sh4dec.rs  sh4mem.rs
