[workspace]
members = [
    "crates/sh4-core",
    "crates/arm7di-core",
    "crates/dreamcast",
    "crates/nulldc-minimal",
    "crates/refsw2-rust",
    "crates/refsw2-cpp"
]

default-members = ["."]

[package]
name = "nullDC"
version = "2.0.0-pre"
edition = "2024"
license-file = "LICENSE"

[package.metadata.docs.rs]
all-features = true
# targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lib]
name = "nulldc"
crate-type = ["rlib", "cdylib"]

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
opt-level = 3
strip = false
debug = true

[profile.release.package."*"]
debug = false
strip = true

[features]
default = ["refsw2-rust"]
refsw2-rust = ["dreamcast/refsw2-rust"]
refsw2-cpp = ["dreamcast/refsw2-cpp"]
# Legacy compatibility
refsw2-native = ["refsw2-cpp"]

[dependencies]
# Always disable default features to prevent multiple backends
dreamcast = { path = "crates/dreamcast", default-features = false }
git-version = "0.3"
wgpu = "26.0.1"
winit = "0.30.12"

# Utilities
bytemuck = "1.16"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Debugger UI server
include_dir = "0.7"

# Mock debug server dependencies (HTTP + WebSocket)
axum = { version = "0.8.5", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
# Menu support (Windows and macOS only, to avoid glib dependency on Linux)
muda = "0.15"
open = "5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["BroadcastChannel", "MessageEvent", "Window"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
