[package]
name = "dreamcast"
version = "0.1.0"
edition = "2021"

[features]
default = ["refsw2-rust"]
refsw2-rust = ["dep:refsw2-rust"]
refsw2-cpp = ["dep:refsw2-cpp"]
# Legacy feature name for compatibility
refsw2-native = ["refsw2-cpp"]

[dependencies]
bitfield = "0.19.3"
once_cell = "1.19"
goblin = "0.10.3"
sh4-core = { path = "../sh4-core" }
arm7di-core = { path = "../arm7di-core" }
refsw2-rust = { path = "../refsw2-rust", optional = true }
refsw2-cpp = { path = "../refsw2-cpp", optional = true }

[build-dependencies]
cc = "1.1"
